@@ -31,6 +31,7 @@ Template for new versions:
 ## New Features
 
 ## Fixes
+- `gui/quickfort`: only print a help blueprint's text once even if the repeat setting is enabled
 
 ## Misc Improvements
 - `control-panel`: Add realistic-melting tweak to control-panel registry
